<resources>
    <string name="app_name" translatable="false">Pokinator</string>
    <string name="logo_desc" translatable="false">Pokinator logo</string>
    <string name="gift_desc">Mystery gift</string>
    <string name="charm_desc">Shiny charm</string>
    <string name="name_input_hint">Enter your name</string>
    <string name="begin_button_text">Begin the test</string>
    <string name="empty_name_input">Please enter your name before beginning the test</string>
    <string name="next_step">Next Step</string>
    <string name="previous_step">Previous Step</string>
    <string name="confirm">Confirm</string>
    <string name="code_cancel">Cancel</string>
    <string name="code_congrat">Congratulations, you unlocked the shiny charm !</string>
    <string name="code_fail">Unknown code, try again</string>
    <string name="code_char_desc" translatable="false">Code char</string>

    <string name="category_preferences">Preferences</string>
    <string name="category_types" translatable="false">Types</string>
    <string name="category_stats">Statistics</string>
    <string name="category_perso">Personal</string>
    <string name="category_phys">Physic</string>
    <string name="category_res">Gotcha !</string>

    <string name="question_legendaries">Do you want your pokémon to be legendary ?</string>
    <string name="question_generations">What are your favorite generations ? (pick 3)</string>
    <string name="generation_one" translatable="false">Gen 1</string>
    <string name="generation_two" translatable="false">Gen 2</string>
    <string name="generation_three" translatable="false">Gen 3</string>
    <string name="generation_four" translatable="false">Gen 4</string>
    <string name="generation_five" translatable="false">Gen 5</string>
    <string name="generation_six" translatable="false">Gen 6</string>
    <string name="generation_seven" translatable="false">Gen 7</string>
    <string name="generation_eight" translatable="false">Gen 8</string>
    <string name="generation_nine" translatable="false">Gen 9</string>
    <string name="too_many_generations">You chose too many generations</string>
    <string name="not_enough_boxes_checked">Please pick 3 generations before proceeding</string>

    <string name="types_back_desc" translatable="false">Types back</string>
    <string name="question_pref_type">Pick your favorite type</string>
    <string name="question_dis_type">Pick your least favorite type</string>
    <string name="normal_type" translatable="false">Normal</string>
    <string name="grass_type">Grass</string>
    <string name="fire_type">Fire</string>
    <string name="water_type">Water</string>
    <string name="electric_type">Electric</string>
    <string name="ice_type">Ice</string>
    <string name="fighting_type">Fighting</string>
    <string name="poison_type">Poison</string>
    <string name="ground_type">Ground</string>
    <string name="flying_type">Flying</string>
    <string name="psychic_type">Psychic</string>
    <string name="bug_type">Bug</string>
    <string name="rock_type">Rock</string>
    <string name="ghost_type">Ghost</string>
    <string name="dragon_type" translatable="false">Dragon</string>
    <string name="dark_type">Dark</string>
    <string name="steel_type">Steel</string>
    <string name="fairy_type">Fairy</string>
    <string name="type_missing">Please pick two types before proceeding</string>

    <string name="before_stats_do">Yes</string>
    <string name="before_stats_skip">No</string>
    <string name="before_stats_question">Do you want to answer questions about your pokémon\'s statistics ?</string>


    <string name="question_stat_attack_def">Do you prefer to deal or withstand damage ?</string>
    <string name="question_stat_melee_dist">Do you prefer to fight in melee or at a distance ?</string>
    <string name="stat_toggle_attack">Attack</string>
    <string name="stat_toggle_defense">Defense</string>
    <string name="stat_toggle_melee">Melee</string>
    <string name="stat_toggle_distance" translatable="false">Distance</string>
    <string name="speed_test_center_desc" translatable="false">Speed test button</string>
    <string name="speed_test_time_text">Time left: %1$d s</string>
    <string name="speed_test_time_text_base">Time left: 10s</string>
    <string name="speed_test_clicks_text" translatable="false">Clicks: %1$d</string>
    <string name="speed_test_result_text">Your score is %1$d clicks</string>
    <string name="speed_test_clicks_text_base" translatable="false">Clicks: 0</string>
    <string name="speed_test_explain_text">When you are ready, start tapping the Pokéball\'s center as fast as you can</string>
    <string name="hp_test_explain_text">When you are ready, click the button above to launch the mini game.\nThen, click again to stop the cursor and try to aim for the target zone</string>
    <string name="hp_test_launch_button">Start</string>
    <string name="hp_test_stop_button" translatable="false">Stop</string>
    <string name="hp_test_success">Success</string>
    <string name="hp_test_fail">Failed</string>
    <string name="mini_game_not_done">Please play the mini game before proceeding</string>

    <string name="question_egg">How would rate your last walking experience ?</string>
    <string name="question_capture">How would rate your last sportive experience besides walking ?</string>
    <string name="question_experience">How would rate your appreciation of challenges ?</string>
    <string name="egg_rating" translatable="false">Egg rating bar</string>
    <string name="capture_rating" translatable="false">Capture rate rating bar</string>
    <string name="experience_rating" translatable="false">Experience rating bar</string>

    <string name="question_size_weight">Use the sliders to determine the size and weight of your pokémon</string>
    <string name="scale_foot_desc" translatable="false">scale foot</string>
    <string name="scale_plates_desc" translatable="false">scale plates</string>
    <string name="pokemon_body_desc" translatable="false">pokémon body</string>

    <string name="res_text">Congratulations %1$s, you caught a new Pokémon</string>
    <string name="pokemon_image_desc" translatable="false">pokémon image</string>
    <string name="pokemon_info" translatable="false">N°%1$d - %2$s</string>

    <string name="back_home">Home page</string>
    <string name="quit_app">Quit</string>
    <string name="save_info">Save</string>
    <string name="pokemon_saved">Detailed information saved</string>

    <string name="del_button" translatable="false">Eff</string>
    <string name="a" translatable="false">A</string>
    <string name="b" translatable="false">B</string>
    <string name="c" translatable="false">C</string>
    <string name="d" translatable="false">D</string>
    <string name="e" translatable="false">E</string>
    <string name="f" translatable="false">F</string>
    <string name="g" translatable="false">G</string>
    <string name="h" translatable="false">H</string>
    <string name="i" translatable="false">I</string>
    <string name="j" translatable="false">J</string>
    <string name="k" translatable="false">K</string>
    <string name="l" translatable="false">L</string>
    <string name="m" translatable="false">M</string>
    <string name="n" translatable="false">N</string>
    <string name="o" translatable="false">O</string>
    <string name="p" translatable="false">P</string>
    <string name="q" translatable="false">Q</string>
    <string name="r" translatable="false">R</string>
    <string name="s" translatable="false">S</string>
    <string name="t" translatable="false">T</string>
    <string name="u" translatable="false">U</string>
    <string name="v" translatable="false">V</string>
    <string name="w" translatable="false">W</string>
    <string name="x" translatable="false">X</string>
    <string name="y" translatable="false">Y</string>
    <string name="z" translatable="false">Z</string>
    <string name="zero" translatable="false">zero</string>
    <string name="one" translatable="false">one</string>
    <string name="two" translatable="false">two</string>
    <string name="three" translatable="false">three</string>
    <string name="four" translatable="false">four</string>
    <string name="five" translatable="false">five</string>
    <string name="six" translatable="false">six</string>
    <string name="seven" translatable="false">seven</string>
    <string name="eight" translatable="false">eight</string>
    <string name="nine" translatable="false">nine</string>

</resources>