<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="365dp"
    android:layout_height="365dp"
    android:background="@drawable/code_enter">

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/pokemon_font"
        android:gravity="start|top"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:text="@string/code_confirm"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/pokemon_font"
        android:gravity="start|top"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:text="@string/code_cancel"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/A"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/a" />

    <ImageView
        android:id="@+id/B"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/b"
        app:layout_constraintStart_toEndOf="@+id/A"
        app:layout_constraintTop_toTopOf="@+id/A"
        app:srcCompat="@drawable/b" />

    <ImageView
        android:id="@+id/C"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/c"
        app:layout_constraintStart_toEndOf="@+id/B"
        app:layout_constraintTop_toTopOf="@+id/B"
        app:srcCompat="@drawable/c"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/delButton"
        android:layout_width="85dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/del_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eff"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/D"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/d"
        app:layout_constraintStart_toEndOf="@+id/C"
        app:layout_constraintTop_toTopOf="@+id/C"
        app:srcCompat="@drawable/d" />

    <ImageView
        android:id="@+id/E"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/e"
        app:layout_constraintStart_toEndOf="@+id/D"
        app:layout_constraintTop_toTopOf="@+id/D"
        app:srcCompat="@drawable/e" />

    <ImageView
        android:id="@+id/F"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/f"
        app:layout_constraintStart_toEndOf="@+id/E"
        app:layout_constraintTop_toTopOf="@+id/E"
        app:srcCompat="@drawable/f" />

    <ImageView
        android:id="@+id/G"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/g"
        app:layout_constraintStart_toEndOf="@+id/F"
        app:layout_constraintTop_toTopOf="@+id/F"
        app:srcCompat="@drawable/g" />

    <ImageView
        android:id="@+id/H"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/h"
        app:layout_constraintStart_toEndOf="@+id/G"
        app:layout_constraintTop_toTopOf="@+id/G"
        app:srcCompat="@drawable/h" />

    <ImageView
        android:id="@+id/I"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/i"
        app:layout_constraintStart_toEndOf="@+id/H"
        app:layout_constraintTop_toTopOf="@+id/H"
        app:srcCompat="@drawable/i" />

    <ImageView
        android:id="@+id/J"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/j"
        app:layout_constraintStart_toEndOf="@+id/I"
        app:layout_constraintTop_toTopOf="@+id/I"
        app:srcCompat="@drawable/j" />

    <ImageView
        android:id="@+id/K"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/k"
        app:layout_constraintStart_toStartOf="@+id/A"
        app:layout_constraintTop_toBottomOf="@+id/A"
        app:srcCompat="@drawable/k" />

    <ImageView
        android:id="@+id/L"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/l"
        app:layout_constraintStart_toStartOf="@+id/B"
        app:layout_constraintTop_toTopOf="@+id/K"
        app:srcCompat="@drawable/l" />

    <ImageView
        android:id="@+id/M"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/m"
        app:layout_constraintStart_toStartOf="@+id/C"
        app:layout_constraintTop_toTopOf="@+id/L"
        app:srcCompat="@drawable/m" />

    <ImageView
        android:id="@+id/N"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/n"
        app:layout_constraintStart_toStartOf="@+id/D"
        app:layout_constraintTop_toTopOf="@+id/M"
        app:srcCompat="@drawable/n" />

    <ImageView
        android:id="@+id/O"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/o"
        app:layout_constraintStart_toStartOf="@+id/E"
        app:layout_constraintTop_toTopOf="@+id/N"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/P"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/p"
        app:layout_constraintStart_toStartOf="@+id/F"
        app:layout_constraintTop_toTopOf="@+id/O"
        app:srcCompat="@drawable/p" />

    <ImageView
        android:id="@+id/Q"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/q"
        app:layout_constraintStart_toStartOf="@+id/G"
        app:layout_constraintTop_toTopOf="@+id/P"
        app:srcCompat="@drawable/q" />

    <ImageView
        android:id="@+id/R"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/r"
        app:layout_constraintStart_toStartOf="@+id/H"
        app:layout_constraintTop_toTopOf="@+id/Q"
        app:srcCompat="@drawable/r" />

    <ImageView
        android:id="@+id/S"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/s"
        app:layout_constraintStart_toStartOf="@+id/I"
        app:layout_constraintTop_toTopOf="@+id/R"
        app:srcCompat="@drawable/s" />

    <ImageView
        android:id="@+id/T"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/t"
        app:layout_constraintStart_toStartOf="@+id/J"
        app:layout_constraintTop_toTopOf="@+id/R"
        app:srcCompat="@drawable/t" />

    <ImageView
        android:id="@+id/U"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/u"
        app:layout_constraintStart_toStartOf="@+id/K"
        app:layout_constraintTop_toBottomOf="@+id/K"
        app:srcCompat="@drawable/u" />

    <ImageView
        android:id="@+id/V"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/v"
        app:layout_constraintStart_toStartOf="@+id/L"
        app:layout_constraintTop_toTopOf="@+id/U"
        app:srcCompat="@drawable/v"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/W"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/w"
        app:layout_constraintStart_toStartOf="@+id/M"
        app:layout_constraintTop_toTopOf="@+id/V"
        app:srcCompat="@drawable/w" />

    <ImageView
        android:id="@+id/X"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/x"
        app:layout_constraintStart_toStartOf="@+id/N"
        app:layout_constraintTop_toTopOf="@+id/W"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/Y"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/y"
        app:layout_constraintStart_toStartOf="@+id/O"
        app:layout_constraintTop_toTopOf="@+id/X"
        app:srcCompat="@drawable/y" />

    <ImageView
        android:id="@+id/Z"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/z"
        app:layout_constraintStart_toStartOf="@+id/P"
        app:layout_constraintTop_toTopOf="@+id/Y"
        app:srcCompat="@drawable/z" />

</androidx.constraintlayout.widget.ConstraintLayout>