<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/beginButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/pokemon_font"
        android:gravity="center_horizontal|top"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:text="@string/begin_button_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/pokemon_font"
        android:gravity="center"
        android:hint="@string/name_input_hint"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/beginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokemon_xavier_clear" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/gift_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mystery_gift" />

</androidx.constraintlayout.widget.ConstraintLayout>