<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="220dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/beforeStatsQuestion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/pokemon_font"
        android:gravity="center"
        android:text="@string/before_stats_question"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/beforeStatsNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/beforeStatsYes"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/pokemon_font"
        android:gravity="start|top"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:text="@string/before_stats_do"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/beforeStatsNo"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/pokemon_font"
        android:gravity="start|top"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:text="@string/before_stats_skip"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>